# DantinoX

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  analyze_dataset.py  benchmark.py  benchmark_analysis.py  benchmark_batch_sweep.py  generate.py  index.html  mkdocs.yml  objects.inv  plot_3d.py  plot_3d_dkv.py  plot_insights.py  plot_linkedin.py  plot_perf.py  plot_results.py  plot_sweeps.py  pyproject.toml  requirements.txt  test.ipynb  train.py  train_sweep.py  train_sweep_attention_comparison.py
.github/workflows/: ci.yml  docs.yml  release.yml  tests.yml
ablation_studies/: index.html
api/: index.html
architecture/: index.html
assets/: cache_loss.csv  cache_vram.csv
assets/wandb_insights/: cleaned_sweep_data.csv
benchmarks/: __init__.py  confidence_sweep.py  diffusion_ar_sweep.py  generation_quality.py  index.html  inference_sweep.py  paradigm_ablations.py  paradigm_bench.py  perplexity_eval.py  plot_diffusion_ar.py  plot_emnlp.py  plot_inference.py  plot_paradigm_ablations.py  plot_paradigm_bench.py  run_all.py  trained_analysis.py  trained_batch_sweep.py
configs/: attention_sweep.yaml  default_config.yaml  defaults_config.yaml  diffusion_base.yaml  elf_base.yaml  random_sweep.yaml  sweep.yaml  sweep_B_down_dim_kv.yaml  sweep_C_mla512_extra.yaml  sweep_C_width_ladder.yaml
core/: __init__.py  attention.py  block.py  config.py  diffusion.py  elf.py  generation.py  lora.py  mla.py  mlp.py  model.py  moe.py  output.py  sharding.py
coverage/: class_index.html  function_index.html  index.html  status.json  z_541c7973af8bf830___init___py.html  z_541c7973af8bf830_plot_3d_dkv_py.html  z_541c7973af8bf830_plot_3d_py.html  z_541c7973af8bf830_plot_insights_py.html  z_541c7973af8bf830_plot_perf_py.html  z_57760688d1f824db___init___py.html  z_57760688d1f824db_attention_py.html  z_57760688d1f824db_block_py.html  z_57760688d1f824db_config_py.html  z_57760688d1f824db_generation_py.html  z_57760688d1f824db_lora_py.html  z_57760688d1f824db_mlp_py.html  z_57760688d1f824db_model_py.html  z_57760688d1f824db_moe_py.html  z_57760688d1f824db_old_model_py.html  z_57760688d1f824db_output_py.html  z_57760688d1f824db_sharding_py.html  z_e2f4d22904cd01fe___init___py.html  z_e2f4d22904cd01fe_bench_py.html  z_e2f4d22904cd01fe_cli_py.html  z_e2f4d22904cd01fe_exceptions_py.html  z_e2f4d22904cd01fe_generator_py.html  z_e2f4d22904cd01fe_hub_py.html  z_e2f4d22904cd01fe_plotting_py.html  z_e2f4d22904cd01fe_trainer_py.html
dantinox/: __init__.py  bench.py  cli.py  exceptions.py  generator.py  hub.py  plotting.py  trainer.py
dantinox/benchmarking/: __init__.py  base.py  suite.py
dantinox/core/: __init__.py  attention.py  block.py  config.py  diffusion.py  elf.py  generation.py  lora.py  mlp.py  model.py  moe.py  output.py  sharding.py
dantinox/paradigms/: __init__.py  ar.py  base.py
dantinox/profiling/: __init__.py  counter.py  tracker.py
dantinox/training/: __init__.py  optimizer.py  trainer.py
dantinox/utils/: helpers.py  t5_encoder.py  tokenizer.py
dantinox/visualization/: __init__.py  base.py  style.py  visualizer.py
docs/: ablation_studies.md  api.md  architecture.md  benchmarks.md  changelog.md  cli.md  configuration.md  contributing.md  cookbook.md  faq.md  generation.md  index.md  paper.md  quickstart.md  requirements.txt  training.md  vs-transformers.md
docs/api/: benchmarking.md  dantinox.md  index.md  paradigms.md  profiling.md  training.md  visualization.md
docs/architecture/: core.md  paradigm-system.md  profiling.md
docs/guides/: index.md  new-benchmark.md  new-chart.md  new-layer.md  new-paradigm.md
docs/inference/: autoregressive.md  diffusion.md  index.md  kv-cache.md
docs/notebooks/: 01_quickstart.ipynb  02_discrete_diffusion.ipynb  03_benchmarking.ipynb  03_elf_flow_matching.ipynb  04_benchmarking.ipynb  05_lora_fine_tuning.ipynb  index.md
docs/paradigms/: autoregressive.md  comparison.md  confidence.md  diffusion.md  elf.md  fast-dllm.md  index.md
docs/stylesheets/: extra.css
docs/training/: autoregressive.md  diffusion.md  emnlp-suite.md  index.md  multi-gpu.md  optimizers.md  sweeps.md
docs/tutorials/: benchmarking.md  diffusion-lm.md  first-model.md  hub.md  index.md  lora-fine-tuning.md
examples/: DantinoX_Colab.ipynb  quickstart.py
generation/: index.html
javascript/: mathjax.js
results/: inference_sweep.csv
runs/run_20260309_140636/: config.yaml
runs/run_20260309_161358/: config.yaml
runs/run_20260309_162042/: config.yaml
runs/run_20260309_164103/: config.yaml
runs/run_20260309_171139/: config.yaml
runs/run_20260309_212342/: config.yaml
runs/run_20260309_213447/: config.yaml
runs/run_20260309_215000/: config.yaml
runs/run_20260311_104415/: config.yaml
runs/run_20260313_125154/: config.yaml
runs/run_20260313_133031/: config.yaml
runs/run_20260313_140827/: config.yaml
runs/run_20260314_174050/: config.yaml
runs/run_20260314_174111/: config.yaml
runs/run_20260314_174414/: config.yaml
runs/run_20260314_175212/: config.yaml
runs/run_20260314_175418/: config.yaml
runs/run_20260314_180037/: config.yaml
runs/run_20260314_180537/: config.yaml
runs/run_20260314_181018/: config.yaml
runs/run_20260314_181535/: config.yaml
scripts/: ceiling_driver.sh  chain_ablations.sh  cleanup_runs.py  run_emnlp_parallel.sh  run_full_emnlp.sh  test_generation_quality.py  train_ar_suite.sh  train_diffusion.sh  train_diffusion_suite.sh  train_elf.sh  train_elf_suite.sh  train_parallel.sh  train_sweep_attention_comparison.py  wait_diff_then_ar.sh
search/: search_index.json
site/: 404.html  index.html  objects.inv
tests/: conftest.py  dummy_data.txt  dummy_data.txt.char.tokenizer.json  dummy_data.txt.char.tokens.npy  dummy_data.txt.t5.tokenizer.json  dummy_data.txt.t5.tokens.npy  test_differential_attention.py  test_improvements.py  test_lora.py  test_mla.py  test_model.py  test_moe.py  test_sweep_simulation.py  test_trainer.py
training/: index.html
utils/: __init__.py  helpers.py  tokenizer.py
wandb/: latest-run
(+1107 files in other folders)
