[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dantinox"
version = "0.1.0"
description = "A decoder-only Transformer built from scratch in JAX and Flax NNX"
authors = [{name = "Marco Simoni"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax",
    "jaxlib",
    "flax",
    "optax",
    "pyyaml",
    "tokenizers",
    "msgpack",
    "tqdm",
]

[project.optional-dependencies]
data      = ["datasets"]
benchmark = ["pandas", "matplotlib", "numpy", "scipy"]
dev       = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-PyYAML",
]
all = ["dantinox[data,benchmark,dev]"]

[project.scripts]
dantinox = "dantinox.cli:main"

[tool.setuptools.packages.find]
include = ["dantinox*", "core*", "utils*"]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"
markers      = [
    "slow: marks tests as slow (skip with -m 'not slow')",
    "gpu: marks tests that require a GPU",
]

# ── ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["core", "utils", "dantinox"]

# ── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version        = "3.10"
strict                = false
ignore_missing_imports = true
warn_unused_ignores   = true
warn_return_any       = true
disallow_untyped_defs = true
files                 = ["dantinox", "core"]
