[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dantinox"
version = "0.4.0"
description = "A decoder-only Transformer built from scratch in JAX and Flax NNX"
authors = [{name = "Marco Simoni"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.30,<0.10",
    "jaxlib>=0.4.30",
    "flax>=0.10,<0.13",
    "optax>=0.2",
    "numpy",
    "pyyaml",
    "tokenizers",
    "msgpack",
    "tqdm",
]

[project.optional-dependencies]
data      = ["datasets"]
hub       = ["huggingface-hub"]
elf       = ["transformers"]
benchmark = ["pandas", "matplotlib", "numpy", "scipy"]
dev       = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-PyYAML",
    "types-tqdm",
    "interrogate>=1.7",
    "pre-commit>=3",
    "build",
    "twine",
    "mkdocs-material>=9",
    "mkdocs-minify-plugin",
    "mkdocs-glightbox",
    "mkdocstrings[python]",
    "mike",
]
all = ["dantinox[data,hub,elf,benchmark,dev]"]

[project.scripts]
dantinox = "dantinox.cli:main"

# NOTE: top-level "core" and "utils" are deprecation shims for the packages
# that moved to dantinox.core / dantinox.utils — drop them in 0.5.0.
[tool.setuptools.packages.find]
include = ["dantinox*", "core*", "utils*"]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"
pythonpath   = ["."]
markers      = [
    "slow: marks tests as slow (skip with -m 'not slow')",
    "gpu: marks tests that require a GPU",
]

# ── ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py310"
exclude        = ["dantinox/core/old_model.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["dantinox", "core", "utils"]

# ── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version        = "3.10"
strict                = false
ignore_missing_imports = true
warn_unused_ignores   = false
warn_return_any       = false
disallow_untyped_defs = true
files                 = ["dantinox"]
exclude               = ["dantinox/core/old_model\\.py"]

[[tool.mypy.overrides]]
module = ["dantinox.core.generation", "dantinox.core.attention"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "dantinox.trainer"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "dantinox.plots.*"
ignore_errors = true

# ── interrogate ───────────────────────────────────────────────────────────────
[tool.interrogate]
ignore-init-module   = true
ignore-magic         = true
ignore-private       = true
ignore-semiprivate   = true
ignore-property-decorators = true
fail-under           = 100
verbose              = 1
color                = true
exclude              = ["dantinox/core/old_model.py", "dantinox/plots/", "dantinox/bench.py",
                        "dantinox/plotting.py"]
whitelist-regex      = []
